# real-time-audio-classifier

./: Dockerfile  README.md  Untitled.ipynb  docker-compose.yaml  pyproject.toml  requirements.txt
archive/: plot.py
src/audio_classifier/: main.py
src/audio_classifier/utils/: features.py  preprocessing.py  utils.py  yamnet.py
