[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-classifier"
version = "0.0.1"
description = "Example app for laughter detection"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tensorflow==2.15.0",
    "keras==2.15.0",
    "librosa==0.10.1",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "sounddevice==0.4.6",
    "pandas==2.1.3",
    "pyaudio==0.2.14"
]

[project.scripts]
audio-classifier = "audio_classifier.main:main"
